--- a/intex.html
+++ b/intex.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">'
+    <link href="https://fonts.googleapis.com/css?family=Gayathri&display=swap">
     <title>Vilkre</title>
+    <style>
+        body {
+            font-family: 'Gayathri', sans-serif;
+            background-color: #d3f6f3;
+            color: rgb(224, 88, 10);
+        }
+        a{
+            color: rgb(0, 38, 255);
+        }
+        h1, h2, h3, h4, h5, h6{
+            text-transform: uppercase;
+        }
+        hr{
+            width: 50%;
+            border-width: 0.25rem;
+            border-style: dotted none none
+
+        }
+    </style>
 </head>
 <body>
 
@@ -49,7 +69,13 @@
 
         </tbody>
     </table>
+
+    <hr><strong>Skills</strong>
+
+
+
     <hr>
+
     <a href="Contact.html"target="_blank">Contact</a>
     
 
